--- a/crates/pallet-humanode-session/Cargo.toml
+++ b/crates/pallet-humanode-session/Cargo.toml
@@ -16,6 +16,11 @@ scale-info = { workspace = true, features = ["derive"] }
 sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 
+[dev-dependencies]
+mockall = { workspace = true }
+serde = { workspace = true }
+sp-core = { workspace = true }
+
 [features]
 default = ["std"]
 std = [
