--- a/crates/pallet-humanode-session/Cargo.toml
+++ b/crates/pallet-humanode-session/Cargo.toml
@@ -28,6 +28,8 @@ runtime-benchmarks = [
   "frame-benchmarking/runtime-benchmarks",
   "frame-support/runtime-benchmarks",
   "frame-system/runtime-benchmarks",
+  "pallet-bioauth/runtime-benchmarks",
+  "pallet-bootnodes/runtime-benchmarks",
   "sp-runtime/runtime-benchmarks",
 ]
 std = [
