Support for banning validators via sudo at `pallet-humanode-session` (#1249)
* Add disable internal logic

* Remove comment about pallet_session::Config usage

* Add kick call

* Implement ban call logic

* Apply filter on banned accounts at next_authorities implementation

* Add MaxBannedAccounts to pallet_humanode_session::Config at humanode-runtime

* Implement unban call logic

* Use try_append directly

* Remove kicking logic containing disable method execution

* Update doc

Co-authored-by: MOZGIII <mike-n@narod.ru>

* Use BoundedBTreeSet instead of BoundedVec for BannedAccounts storage value

* Introduce weights

* Add banned_accounts arg to calculate weights

* Avoid dropping and re-acquiring the ref working with BannedAccounts

* Prepare mocked environment

* Add basic tests setup

* Add missed historical pallet to construct_runtime

* Properly init genesis

* Add basic happy tests for ban and unban calls

* Add ban related fails tests

* Add unban related fails tests

* Use DeriveError instead of Infallible

* Fix features

* Properly use WeightInfo for ban and unban calls

* Implement benchmarking at pallet-humanode-session

* Implement benchmarking interface at humanode-runtime

* Fix features

* Properly vary the amount of pre-populated banned accounts for unban benchmark

* Add pallet-humanode-session to be benchmarked at humanode-runtime

* Benchmarks pallet-humanode-session and use the result at humanode-runtime

* Implement full_ban_unban_lifecycle test

* Rename account_id_from to provide_account_id

* Fix typo

* Reorder map and filter

Co-authored-by: MOZGIII <mike-n@narod.ru>

* Regenerate weights

---------

Co-authored-by: MOZGIII <mike-n@narod.ru>

--- a/crates/pallet-humanode-session/Cargo.toml
+++ b/crates/pallet-humanode-session/Cargo.toml
@@ -9,6 +9,7 @@ pallet-bioauth = { path = "../pallet-bioauth", default-features = false }
 pallet-bootnodes = { path = "../pallet-bootnodes", default-features = false }
 
 codec = { workspace = true, features = ["derive"] }
+frame-benchmarking = { workspace = true, optional = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
 pallet-session = { workspace = true, features = ["historical"] }
@@ -16,8 +17,21 @@ scale-info = { workspace = true, features = ["derive"] }
 sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 
+[dev-dependencies]
+mockall = { workspace = true }
+serde = { workspace = true }
+sp-core = { workspace = true }
+
 [features]
 default = ["std"]
+runtime-benchmarks = [
+  "frame-benchmarking/runtime-benchmarks",
+  "frame-support/runtime-benchmarks",
+  "frame-system/runtime-benchmarks",
+  "pallet-bioauth/runtime-benchmarks",
+  "pallet-bootnodes/runtime-benchmarks",
+  "sp-runtime/runtime-benchmarks",
+]
 std = [
   "pallet-bioauth/std",
   "pallet-bootnodes/std",
@@ -26,6 +40,8 @@ std = [
   "frame-system/std",
   "pallet-session/std",
   "scale-info/std",
+  "serde/std",
+  "sp-core/std",
   "sp-runtime/std",
   "sp-std/std",
 ]
