--- a/crates/humanode-runtime/Cargo.toml
+++ b/crates/humanode-runtime/Cargo.toml
@@ -88,6 +88,7 @@ sp-block-builder = { workspace = true }
 sp-consensus-babe = { workspace = true }
 sp-core = { workspace = true }
 sp-inherents = { workspace = true }
+sp-io = { workspace = true }
 sp-offchain = { workspace = true }
 sp-runtime = { workspace = true }
 sp-session = { workspace = true }
@@ -106,7 +107,6 @@ ethereum = { workspace = true, features = ["default"] }
 hex = { workspace = true }
 hex-literal = { workspace = true }
 serde_json = { workspace = true }
-sp-io = { workspace = true }
 sp-keystore = { workspace = true }
 
 [features]
@@ -270,4 +270,9 @@ try-runtime = [
   "pallet-vesting/try-runtime",
   "primitives-currency-swap-proxy/try-runtime",
   "sp-runtime/try-runtime",
+]
+with-tracing = [
+  "frame-executive/with-tracing",
+  "sp-io/with-tracing",
+  "sp-tracing/with-tracing"
 ]
