--- a/crates/pallet-balanced-currency-swap-bridges-initializer/Cargo.toml
+++ b/crates/pallet-balanced-currency-swap-bridges-initializer/Cargo.toml
@@ -14,6 +14,7 @@ sp-std = { workspace = true }
 [dev-dependencies]
 pallet-pot = { path = "../pallet-pot", default-features = false }
 
+frame-executive = { workspace = true }
 pallet-balances = { workspace = true }
 sp-core = { workspace = true }
 
@@ -21,6 +22,7 @@ sp-core = { workspace = true }
 default = ["std"]
 std = [
   "codec/std",
+  "frame-executive/std",
   "frame-support/std",
   "frame-system/std",
   "pallet-balances/std",
@@ -30,6 +32,7 @@ std = [
   "sp-std/std",
 ]
 try-runtime = [
+  "frame-executive/try-runtime",
   "frame-support/try-runtime",
   "frame-system/try-runtime",
   "pallet-balances/try-runtime",
