--- a/crates/pallet-humanode-offences/Cargo.toml
+++ b/crates/pallet-humanode-offences/Cargo.toml
@@ -14,6 +14,14 @@ frame-system = { workspace = true }
 scale-info = { workspace = true, features = ["derive"] }
 sp-staking = { workspace = true }
 
+[dev-dependencies]
+pallet-bootnodes = { path = "../pallet-bootnodes" }
+
+mockall = { workspace = true }
+pallet-session = { workspace = true, features = ["historical"] }
+serde = { workspace = true }
+sp-core = { workspace = true }
+
 [features]
 default = ["std"]
 std = [
@@ -22,12 +30,17 @@ std = [
   "frame-system/std",
   "pallet-bioauth/std",
   "pallet-humanode-session/std",
+  "pallet-session/std",
   "scale-info/std",
+  "serde/std",
+  "sp-core/std",
   "sp-staking/std",
 ]
 try-runtime = [
   "frame-support/try-runtime",
   "frame-system/try-runtime",
   "pallet-bioauth/try-runtime",
+  "pallet-bootnodes/try-runtime",
   "pallet-humanode-session/try-runtime",
+  "pallet-session/try-runtime",
 ]
