Move the bioauth OffenceSlasher from the runtime to its own pallet (#1291)
* Introduce offence handler logic

* Reorder slashing and report_offence

* Introduce pallet-humanode-offences

* Apply HumanodeOffences at runtime

* Remove pallet-offences usage

* Fix offence_handler test

* Fix features

* Fix features snapshot

* Implement slashing logic right at the pallet level

* Fix features

* Use RemovePallet logic for offences pallet at runtime

* Use proper Offences pallen name

* Don't remove offences old data at runtime upgrade execution

* Introduce total number of offences

* Mocked environment with basic_setup_works test

* Add more tests

* Use different sequence number for HumanodeOffence pallet at construct_runtime

* Move total value update logic if should_be_deauthenticated is not empty

* Introduce ReportedOffence event logic

--- a/crates/humanode-runtime/Cargo.toml
+++ b/crates/humanode-runtime/Cargo.toml
@@ -27,6 +27,7 @@ pallet-dummy-precompiles-code = { path = "../pallet-dummy-precompiles-code", def
 pallet-erc20-support = { path = "../pallet-erc20-support", default-features = false }
 pallet-ethereum-chain-id = { path = "../pallet-ethereum-chain-id", default-features = false }
 pallet-evm-accounts-mapping = { path = "../pallet-evm-accounts-mapping", default-features = false }
+pallet-humanode-offences = { path = "../pallet-humanode-offences", default-features = false }
 pallet-humanode-session = { path = "../pallet-humanode-session", default-features = false }
 pallet-pot = { path = "../pallet-pot", default-features = false }
 pallet-token-claims = { path = "../pallet-token-claims", default-features = false }
@@ -73,7 +74,6 @@ pallet-evm-system = { workspace = true }
 pallet-grandpa = { workspace = true }
 pallet-im-online = { workspace = true }
 pallet-multisig = { workspace = true }
-pallet-offences = { workspace = true }
 pallet-session = { workspace = true, features = ["historical"] }
 pallet-sudo = { workspace = true }
 pallet-timestamp = { workspace = true }
@@ -130,7 +130,6 @@ runtime-benchmarks = [
   "pallet-humanode-session/runtime-benchmarks",
   "pallet-im-online/runtime-benchmarks",
   "pallet-multisig/runtime-benchmarks",
-  "pallet-offences/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-token-claims/runtime-benchmarks",
   "pallet-utility/runtime-benchmarks",
@@ -184,10 +183,10 @@ std = [
   "pallet-evm-balances/std",
   "pallet-evm-system/std",
   "pallet-grandpa/std",
+  "pallet-humanode-offences/std",
   "pallet-humanode-session/std",
   "pallet-im-online/std",
   "pallet-multisig/std",
-  "pallet-offences/std",
   "pallet-pot/std",
   "pallet-session/std",
   "pallet-sudo/std",
@@ -254,10 +253,10 @@ try-runtime = [
   "pallet-evm-balances/try-runtime",
   "pallet-evm-system/try-runtime",
   "pallet-grandpa/try-runtime",
+  "pallet-humanode-offences/try-runtime",
   "pallet-humanode-session/try-runtime",
   "pallet-im-online/try-runtime",
   "pallet-multisig/try-runtime",
-  "pallet-offences/try-runtime",
   "pallet-pot/try-runtime",
   "pallet-session/try-runtime",
   "pallet-sudo/try-runtime",
