Disable missing_docs and clippy::missing_docs_in_private_items for now

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,8 +3,8 @@ rustflags = [
   "-Dunsafe_code",
   "-Wclippy::all",
   "-Wclippy::cargo",
-  "-Wmissing_docs",
-  "-Wclippy::missing_docs_in_private_items",
+  # "-Wmissing_docs",
+  # "-Wclippy::missing_docs_in_private_items",
   "-Wclippy::clone_on_ref_ptr",
   "-Wclippy::await_holding_lock",
   "-Wclippy::arithmetic_side_effects",
