--- a/Cargo.toml
+++ b/Cargo.toml
@@ -170,6 +170,29 @@ evm-core = { path = "../evm/core" }
 evm-gasometer = { path = "../evm/gasometer" }
 evm-runtime = { path = "../evm/runtime" }
 
+[patch."https://github.com/humanode-network/frontier"]
+fc-cli = { path = "../frontier/client/cli" }
+fc-consensus = { path = "../frontier/client/consensus" }
+fc-db = { path = "../frontier/client/db" }
+fc-mapping-sync = { path = "../frontier/client/mapping-sync" }
+fc-rpc = { path = "../frontier/client/rpc" }
+fc-rpc-core = { path = "../frontier/client/rpc-core" }
+fc-storage = { path = "../frontier/client/storage" }
+fp-evm = { path = "../frontier/primitives/evm" }
+fp-rpc = { path = "../frontier/primitives/rpc" }
+fp-self-contained = { path = "../frontier/primitives/self-contained" }
+fp-storage = { path = "../frontier/primitives/storage" }
+pallet-ethereum = { path = "../frontier/frame/ethereum" }
+pallet-evm = { path = "../frontier/frame/evm" }
+pallet-evm-balances = { path = "../frontier/frame/evm-balances" }
+pallet-evm-precompile-blake2 = { path = "../frontier/frame/evm/precompile/blake2" }
+pallet-evm-precompile-bn128 = { path = "../frontier/frame/evm/precompile/bn128" }
+pallet-evm-precompile-modexp = { path = "../frontier/frame/evm/precompile/modexp" }
+pallet-evm-precompile-sha3fips = { path = "../frontier/frame/evm/precompile/sha3fips" }
+pallet-evm-precompile-simple = { path = "../frontier/frame/evm/precompile/simple" }
+pallet-evm-system = { path = "../frontier/frame/evm-system" }
+pallet-evm-test-vector-support = { path = "../frontier/frame/evm/test-vector-support" }
+
 [profile.release]
 debug = "line-tables-only"
 
