--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,27 +142,27 @@ substrate-wasm-builder = { git = "https://github.com/humanode-network/substrate"
 try-runtime-cli = { git = "https://github.com/humanode-network/substrate", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
 
 # Frontier fork.
-fc-cli = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-fc-consensus = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-fc-db = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-fc-mapping-sync = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-fc-rpc = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-fc-rpc-core = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-fc-storage = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-fp-evm = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-fp-rpc = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-fp-self-contained = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-fp-storage = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-pallet-ethereum = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-pallet-evm = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-pallet-evm-balances = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-pallet-evm-precompile-blake2 = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-pallet-evm-precompile-bn128 = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-pallet-evm-precompile-modexp = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-pallet-evm-precompile-sha3fips = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-pallet-evm-precompile-simple = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-pallet-evm-system = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
-pallet-evm-test-vector-support = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
+fc-cli = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-consensus = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-db = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-mapping-sync = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-rpc = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-rpc-core = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-storage = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fp-evm = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fp-rpc = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fp-self-contained = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fp-storage = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-ethereum = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-balances = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-precompile-blake2 = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-precompile-bn128 = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-precompile-modexp = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-precompile-sha3fips = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-precompile-simple = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-system = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-test-vector-support = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
 
 [profile.release]
 debug = "line-tables-only"
