--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,56 +142,27 @@ substrate-wasm-builder = { git = "https://github.com/humanode-network/substrate"
 try-runtime-cli = { git = "https://github.com/humanode-network/substrate", tag = "locked/polkadot-v0.9.42-2024-09-12", default-features = false }
 
 # Frontier fork.
-fc-cli = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-fc-consensus = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-fc-db = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-fc-mapping-sync = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-fc-rpc = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-fc-rpc-core = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-fc-storage = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-fp-evm = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-fp-rpc = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-fp-self-contained = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-fp-storage = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-pallet-ethereum = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-pallet-evm = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-pallet-evm-balances = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-pallet-evm-precompile-blake2 = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-pallet-evm-precompile-bn128 = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-pallet-evm-precompile-modexp = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-pallet-evm-precompile-sha3fips = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-pallet-evm-precompile-simple = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-pallet-evm-system = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-pallet-evm-test-vector-support = { git = "https://github.com/humanode-network/frontier", branch = "debug-opcodes-v0.9.42", default-features = false }
-
-[patch."https://github.com/humanode-network/evm"]
-evm = { path = "../evm" }
-evm-core = { path = "../evm/core" }
-evm-gasometer = { path = "../evm/gasometer" }
-evm-runtime = { path = "../evm/runtime" }
-
-[patch."https://github.com/humanode-network/frontier"]
-fc-cli = { path = "../frontier/client/cli" }
-fc-consensus = { path = "../frontier/client/consensus" }
-fc-db = { path = "../frontier/client/db" }
-fc-mapping-sync = { path = "../frontier/client/mapping-sync" }
-fc-rpc = { path = "../frontier/client/rpc" }
-fc-rpc-core = { path = "../frontier/client/rpc-core" }
-fc-storage = { path = "../frontier/client/storage" }
-fp-evm = { path = "../frontier/primitives/evm" }
-fp-rpc = { path = "../frontier/primitives/rpc" }
-fp-self-contained = { path = "../frontier/primitives/self-contained" }
-fp-storage = { path = "../frontier/primitives/storage" }
-pallet-ethereum = { path = "../frontier/frame/ethereum" }
-pallet-evm = { path = "../frontier/frame/evm" }
-pallet-evm-balances = { path = "../frontier/frame/evm-balances" }
-pallet-evm-precompile-blake2 = { path = "../frontier/frame/evm/precompile/blake2" }
-pallet-evm-precompile-bn128 = { path = "../frontier/frame/evm/precompile/bn128" }
-pallet-evm-precompile-modexp = { path = "../frontier/frame/evm/precompile/modexp" }
-pallet-evm-precompile-sha3fips = { path = "../frontier/frame/evm/precompile/sha3fips" }
-pallet-evm-precompile-simple = { path = "../frontier/frame/evm/precompile/simple" }
-pallet-evm-system = { path = "../frontier/frame/evm-system" }
-pallet-evm-test-vector-support = { path = "../frontier/frame/evm/test-vector-support" }
+fc-cli = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-consensus = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-db = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-mapping-sync = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-rpc = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-rpc-core = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fc-storage = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fp-evm = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fp-rpc = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fp-self-contained = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+fp-storage = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-ethereum = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-balances = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-precompile-blake2 = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-precompile-bn128 = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-precompile-modexp = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-precompile-sha3fips = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-precompile-simple = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-system = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
+pallet-evm-test-vector-support = { git = "https://github.com/humanode-network/frontier", branch = "fix-reducible-balance", default-features = false }
 
 [profile.release]
 debug = "line-tables-only"
