E2E-test: `withdrawAll` from the contracts' factory between two CREATEs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,5 @@
     "utils/e2e-tests/ts/**/tests/**/*.ts",
     "utils/e2e-tests/ts/**/*.{test,spec}.ts"
   ],
-  "prettier.prettierPath": "./node_modules/.bin/prettier"
+  "prettier.prettierPath": "./node_modules/prettier"
 }
