--- a/crates/pallet-evm-system/Cargo.toml
+++ b/crates/pallet-evm-system/Cargo.toml
@@ -1,25 +1,17 @@
 [package]
 name = "pallet-evm-system"
-version = "1.0.0-dev"
-license = "Apache-2.0"
-description = "FRAME EVM SYSTEM pallet."
-edition = { workspace = true }
-repository = { workspace = true }
-
-[package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
+version = "0.1.0"
+edition = "2021"
+publish = false
 
 [dependencies]
-log = { workspace = true, default-features = false }
-scale-codec = { package = "parity-scale-codec", workspace = true }
-scale-info = { workspace = true }
-# Substrate
+codec = { workspace = true }
+fp-evm = { workspace = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
+scale-info = { workspace = true }
 sp-runtime = { workspace = true }
 sp-std = { workspace = true }
-# Frontier
-fp-evm = { workspace = true }
 
 [dev-dependencies]
 mockall = { workspace = true }
@@ -29,18 +21,15 @@ sp-io = { workspace = true }
 [features]
 default = ["std"]
 std = [
-	"log/std",
-	"scale-codec/std",
-	"scale-info/std",
-	# Substrate
-	"frame-support/std",
-	"frame-system/std",
-	"sp-runtime/std",
-	"sp-std/std",
-	# Frontier
-  	"fp-evm/std",
+  "codec/std",
+  "fp-evm/std",
+  "frame-support/std",
+  "frame-system/std",
+  "scale-info/std",
+  "sp-runtime/std",
+  "sp-std/std",
 ]
 try-runtime = [
-	"frame-support/try-runtime",
-	"frame-system/try-runtime",
+  "frame-support/try-runtime",
+  "frame-system/try-runtime",
 ]
