--- a/crates/pallet-evm-system/Cargo.toml
+++ b/crates/pallet-evm-system/Cargo.toml
@@ -26,10 +26,13 @@ std = [
   "frame-support/std",
   "frame-system/std",
   "scale-info/std",
+  "sp-core/std",
+  "sp-io/std",
   "sp-runtime/std",
   "sp-std/std",
 ]
 try-runtime = [
   "frame-support/try-runtime",
   "frame-system/try-runtime",
+  "sp-runtime/try-runtime",
 ]
