--- a/crates/pallet-currency-swap/Cargo.toml
+++ b/crates/pallet-currency-swap/Cargo.toml
@@ -16,10 +16,11 @@ sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 
 [dev-dependencies]
+pallet-evm-balances = { path = "../pallet-evm-balances", features = ["default"] }
+pallet-evm-system = { path = "../pallet-evm-system", features = ["default"] }
+
 mockall = { workspace = true }
 pallet-balances = { workspace = true, features = ["default"] }
-pallet-evm-balances = { workspace = true, features = ["default"] }
-pallet-evm-system = { workspace = true, features = ["default"] }
 sp-core = { workspace = true }
 
 [features]
