--- a/crates/pallet-evm-balances/Cargo.toml
+++ b/crates/pallet-evm-balances/Cargo.toml
@@ -1,28 +1,22 @@
 [package]
 name = "pallet-evm-balances"
-version = "1.0.0-dev"
-license = "Apache-2.0"
-description = "FRAME EVM BALANCES pallet."
-edition = { workspace = true }
-repository = { workspace = true }
-
-[package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
+version = "0.1.0"
+edition = "2021"
+publish = false
 
 [dependencies]
-log = { workspace = true, default-features = false }
-scale-codec = { package = "parity-scale-codec", workspace = true }
-scale-info = { workspace = true }
-# Substrate
+codec = { workspace = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
+scale-info = { workspace = true }
 sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 
 [dev-dependencies]
+pallet-evm-system = { path = "../pallet-evm-system", features = ["default"] }
+
 fp-evm = { workspace = true }
 pallet-evm = { workspace = true }
-pallet-evm-system = { workspace = true }
 pallet-timestamp = { workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
@@ -30,21 +24,24 @@ sp-io = { workspace = true }
 [features]
 default = ["std"]
 std = [
-	"log/std",
-	"scale-codec/std",
-	"scale-info/std",
-	# Substrate
-	"frame-support/std",
-	"frame-system/std",
-	"pallet-timestamp/std",
-	"sp-runtime/std",
-	"sp-std/std",
-	# Frontier
-	"fp-evm/std",
-	"pallet-evm/std",
-	"pallet-evm-system/std",
+  "codec/std",
+  "fp-evm/std",
+  "frame-support/std",
+  "frame-system/std",
+  "pallet-evm-system/std",
+  "pallet-evm/std",
+  "pallet-timestamp/std",
+  "scale-info/std",
+  "sp-core/std",
+  "sp-io/std",
+  "sp-runtime/std",
+  "sp-std/std",
 ]
 try-runtime = [
-	"frame-support/try-runtime",
-	"frame-system/try-runtime",
+  "frame-support/try-runtime",
+  "frame-system/try-runtime",
+  "pallet-evm-system/try-runtime",
+  "pallet-evm/try-runtime",
+  "pallet-timestamp/try-runtime",
+  "sp-runtime/try-runtime",
 ]
