Move `pallet-evm-balances` and `pallet-evm-system` from frontier fork to humanode repo (#1430)
* Move `pallet-evm-balances` and `pallet-evm-system` from frontier, preserving history (#1429)

* Sovereign accounts and EVM system layer (#94) (#99)

* Sovereign accounts and EVM system layer (#94)

* Sovereign accounts and EVM system layer (#86)

* Frame evm system (#62)

* Add initial impl of evm-system

* Check account existence

* Improve creation account logic

* Add new line

* Add default implementations

* Add mock

* Use DispatchResult instead of custom enums

* Basic create account tests

* Add simple tests with remove account and nonce update

* Remove default implementations for OnNewAccount and OnKilledAccount

* Add mock objects for OnNewAccount and OnKilledAccount

* Use mock logic in tests

* Some tests improvements

* Add docs to tests

* Check events in tests

* Add default implementation for OnNewAccount and OnKilledAccount for empty tuple (#63)

* Implement StoredMap for EvmSystem (#64)

* Add try-runtime feature into `pallet-evm-system` (#67)

Add try-runtime feature at pallet-evm-system

* Use `sp_std` library to add FromStr trait for tests at `pallet-evm-system` (#68)

Use sp_std library to add FromStr trait for tests at pallet-evm-system

* Rename FullAccount into Account at `pallet-evm-system` (#69)

Rename FullAccount into Account at pallet-evm-system

* Fix `try_mutate_exists` implementation and add tests to check it (#70)

* Fix try_mutate_exists logic

* Add tests

* Fix AccountData type at mock

* Remove redundant mock expectations

* Add comments for new tests

* More explicitly handle (none,false) case

* Rename some_data back to maybe_account_data

* Add data changes for try_mutate_exists_fails_without_changes test

* Add try_mutate_exists_account_not_created test

* Add assert_noop to check state chages

* Return success for try_mutate_exists_account_not_created t

--- a/crates/pallet-evm-balances/Cargo.toml
+++ b/crates/pallet-evm-balances/Cargo.toml
@@ -1,26 +1,25 @@
 [package]
-name = "pallet-dummy-precompiles-code"
+name = "pallet-evm-balances"
 version = "0.1.0"
 edition = "2021"
 publish = false
 
 [dependencies]
-codec = { workspace = true, features = ["derive"] }
+codec = { workspace = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
-pallet-evm = { workspace = true }
-scale-info = { workspace = true, features = ["derive"] }
-sp-core = { workspace = true }
+scale-info = { workspace = true }
+sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 
 [dev-dependencies]
-pallet-evm-balances = { path = "../pallet-evm-balances", features = ["default"] }
 pallet-evm-system = { path = "../pallet-evm-system", features = ["default"] }
 
 fp-evm = { workspace = true }
-hex-literal = { workspace = true }
-pallet-balances = { workspace = true, features = ["default"] }
-pallet-timestamp = { workspace = true, features = ["default"] }
+pallet-evm = { workspace = true }
+pallet-timestamp = { workspace = true }
+sp-core = { workspace = true }
+sp-io = { workspace = true }
 
 [features]
 default = ["std"]
@@ -29,21 +28,20 @@ std = [
   "fp-evm/std",
   "frame-support/std",
   "frame-system/std",
-  "pallet-balances/std",
-  "pallet-evm-balances/std",
   "pallet-evm-system/std",
   "pallet-evm/std",
   "pallet-timestamp/std",
   "scale-info/std",
   "sp-core/std",
+  "sp-io/std",
+  "sp-runtime/std",
   "sp-std/std",
 ]
 try-runtime = [
   "frame-support/try-runtime",
   "frame-system/try-runtime",
-  "pallet-balances/try-runtime",
-  "pallet-evm-balances/try-runtime",
   "pallet-evm-system/try-runtime",
   "pallet-evm/try-runtime",
   "pallet-timestamp/try-runtime",
+  "sp-runtime/try-runtime",
 ]
