--- a/crates/pallet-evm-system/Cargo.toml
+++ b/crates/pallet-evm-system/Cargo.toml
@@ -9,14 +9,16 @@ codec = { workspace = true }
 fp-evm = { workspace = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
+rlp = { workspace = true }
 scale-info = { workspace = true }
+sp-core = { workspace = true }
+sp-io = { workspace = true }
 sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 
 [dev-dependencies]
+hex-literal = { workspace = true }
 mockall = { workspace = true }
-sp-core = { workspace = true }
-sp-io = { workspace = true }
 
 [features]
 default = ["std"]
@@ -25,6 +27,7 @@ std = [
   "fp-evm/std",
   "frame-support/std",
   "frame-system/std",
+  "rlp/std",
   "scale-info/std",
   "sp-core/std",
   "sp-io/std",
