--- a/crates/evm-nonces-recovery/Cargo.toml
+++ b/crates/evm-nonces-recovery/Cargo.toml
@@ -1,38 +1,35 @@
 [package]
-name = "pallet-evm-system"
+name = "evm-nonces-recovery"
 version = "0.1.0"
 edition = "2021"
 publish = false
 
 [dependencies]
-codec = { workspace = true }
-fp-evm = { workspace = true }
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-scale-info = { workspace = true }
-sp-runtime = { workspace = true }
-sp-std = { workspace = true }
+pallet-evm-system = { path = "../pallet-evm-system", default-features = false }
 
-[dev-dependencies]
-mockall = { workspace = true }
+codec = { workspace = true }
+frame-support = { workspace = true }
+rlp = { workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
+sp-runtime = { workspace = true }
+
+[dev-dependencies]
+hex-literal = { workspace = true }
 
 [features]
 default = ["std"]
 std = [
   "codec/std",
-  "fp-evm/std",
   "frame-support/std",
-  "frame-system/std",
-  "scale-info/std",
+  "rlp/std",
+  "pallet-evm-system/std",
   "sp-core/std",
   "sp-io/std",
   "sp-runtime/std",
-  "sp-std/std",
 ]
 try-runtime = [
   "frame-support/try-runtime",
-  "frame-system/try-runtime",
+  "pallet-evm-system/try-runtime",
   "sp-runtime/try-runtime",
 ]
