--- a/crates/pallet-support/Cargo.toml
+++ b/crates/pallet-support/Cargo.toml
@@ -2,6 +2,7 @@
 name = "pallet-support"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 frame-support = { workspace = true }
