--- a/crates/pallet-native-to-evm-currency-swap/Cargo.toml
+++ b/crates/pallet-native-to-evm-currency-swap/Cargo.toml
@@ -27,6 +27,7 @@ runtime-benchmarks = [
 ]
 std = [
   "codec/std",
+  "ethereum/std",
   "fp-ethereum/std",
   "frame-support/std",
   "frame-system/std",
