--- a/crates/pallet-evm-swap/Cargo.toml
+++ b/crates/pallet-evm-swap/Cargo.toml
@@ -19,13 +19,23 @@ pallet-evm = { workspace = true }
 scale-info = { workspace = true, features = ["derive"] }
 sp-core = { workspace = true }
 
+[dev-dependencies]
+pallet-evm-balances = { path = "../pallet-evm-balances", features = ["default"] }
+pallet-evm-system = { path = "../pallet-evm-system", features = ["default"] }
+
+hex-literal = { workspace = true }
+pallet-balances = { workspace = true, features = ["default"] }
+pallet-timestamp = { workspace = true, features = ["default"] }
+
 [features]
 default = ["std"]
 runtime-benchmarks = [
   "frame-support/runtime-benchmarks",
   "frame-system/runtime-benchmarks",
+  "pallet-balances/runtime-benchmarks",
   "pallet-ethereum/runtime-benchmarks",
   "pallet-evm/runtime-benchmarks",
+  "pallet-timestamp/runtime-benchmarks",
 ]
 std = [
   "codec/std",
@@ -35,8 +45,10 @@ std = [
   "frame-support/std",
   "frame-system/std",
   "num_enum/std",
+  "pallet-balances/std",
   "pallet-ethereum/std",
   "pallet-evm/std",
+  "pallet-timestamp/std",
   "precompile-utils/std",
   "scale-info/std",
   "sp-core/std",
@@ -44,6 +56,10 @@ std = [
 try-runtime = [
   "frame-support/try-runtime",
   "frame-system/try-runtime",
+  "pallet-balances/try-runtime",
   "pallet-ethereum/try-runtime",
+  "pallet-evm-balances/try-runtime",
+  "pallet-evm-system/try-runtime",
   "pallet-evm/try-runtime",
+  "pallet-timestamp/try-runtime",
 ]
